libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__qualified_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Qualified path
expression: "std::collections::HashMap"
info:
  kind: Ok
---
Expr#4294967040@7
  ExprKind (Path)
    Path#4294967040@7 (rooted: false)
      PathSegment#4294967040@2 (name: std)
      PathSegment#4294967040@4 (name: collections)
      PathSegment#4294967040@6 (name: HashMap)
