libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__rooted_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Rooted path
expression: "::foo"
info:
  kind: Ok
---
Expr#4294967040@3
  ExprKind (Path)
    Path#4294967040@3 (rooted: true)
      PathSegment#4294967040@2 (name: foo)
