libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__simple_field.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Simple field access
expression: ".field"
info:
  kind: Ok
---
Field(
    Ident {
        span: SpanId(
            1,
        ),
        value: Symbol(
            "field",
        ),
        kind: Lexical,
    },
)
