libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__simple_identifier.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Simple identifier
expression: foo
info:
  kind: Ok
---
Expr#4294967040@3
  ExprKind (Path)
    Path#4294967040@3 (rooted: false)
      PathSegment#4294967040@2 (name: foo)
