libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__unclosed_access_chain.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Unclosed access chain
expression: "foo.bar[0"
info:
  kind: Err
---
foo.bar[0
       ^
