libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__unclosed_bracket.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Unclosed bracket
expression: "[42"
info:
  kind: Err
---
[42
   ^
