libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__underscore.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Underscore path
expression: _
info:
  kind: Ok
---
Expr#4294967040@1
  ExprKind (Underscore)
