libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__underscore_identifier.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Underscore identifier
expression: _name
info:
  kind: Ok
---
Expr#4294967040@3
  ExprKind (Path)
    Path#4294967040@3 (rooted: false)
      PathSegment#4294967040@2 (name: _name)
